# PWnAge

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  Makefile  README.md  TODOlist.txt  cmake_install.cmake  project_tree.txt  resonances.ini
GPU/: GPUMemoryHandler.h  TCalcGPU.cu
Other/: CMakeLists.txt  Minimizer.cpp  Minimizer.h  TCalcCPU.cpp  TCalcGPU.h  TCalcPHI.cpp  TJpsiToKKpi0Const.cpp  TPWAFunction.cpp  TPWAFunction.h  TPWAFunctionCPU.cpp  TPWAFunctionCPU.h  TPWAFunctionPHI.cpp  parse.cpp
common/include/: TCache.h  TPWAFunction.h  TResonanceSet.h  cfloat.h
common/src/: TCache.cpp  TPWAFunction.cpp  TStat.cpp
include/: BlattWeisskopf.h  ConfigParser.h  MemoryHandler.h  ObjectiveFunction.h  OffloadDirectives.h  TCache.h  TCacheFile.h  TCalcCPU.h  TCalcCache.h  TCalcPHI.h  TDataCache.h  TDevice.h  TEvent.h  TFloat.h  TInputFiles.h  TJpsiToKKpi0Const.h  TPWAFunction.h  TPWAFunctionCPU.h  TPWAFunctionGPU.h  TPWAFunctionPHI.h  TPtr.h  TReaction.h  TResonanceSet.h  TUtils.h  TVertex1to2.h  TX.h  VTLorentzVector.h  VTVector3.h  cuda_complex.hpp  deviceType.h  multiindex.h
include_bak/: Kernels.h  ObjectiveFunction.h  TPWAFunction.h  TPWAFunctionPHI.h  TStat.h
libCache/: CMakeLists.txt  TCache.cpp  TCache.h  TCalcCache.cpp  TCalcCache.h  TDataCache.cpp
libCommon/: CMakeLists.txt  SimpTimer.cpp  SimpTimer.h  TGlobals.h  TUtils.h
libConfPars/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.h
libMemHandle/: CMakeLists.txt
libObjFunc/: README.md
libObjFunc_bak/: CMakeLists.txt  TPWAFunction.cpp  TPWAFunction.h  TPWAFunctionCPU.cpp
libPhys/: CMakeLists.txt  TEpsilon.h  TX.cpp  VTLorentzVector.cpp  VTVector3.cpp
libRes/: CMakeLists.txt  TFitPar.cpp  TFitPar.h  TParArray.cpp  TParArray.h  TParType.h  TResonance.cpp  TResonance.h  TResonanceSet.cpp  TResonanceSet.h
main/: test_JpsiToKKpi0.cpp
src/: ConfigParser.cpp  GPUMemoryHandler.cu  Kernels.cu  TCache.cpp  TCacheFile.cpp  TCalcCPU.cpp  TCalcCache.cpp  TDataCache.cpp  TEpsilon.cpp  TPWAFunction.cpp  TPWAFunctionCPU.cpp  TPWAFunctionGPU.cpp  TPWAFunctionPHI.cpp  TVertex1to2.cpp  TX.cpp  VTLorentzVector.cpp  VTVector3.cpp  draw_my.cc  multiindex.cpp  test_JpsiToKKpi0.cpp
src_bak/: TPWAFunction.cpp
test/: CMakeLists.txt
test/testAll/: CMakeLists.txt  main.cc  testTFitPar.cc  testTPWAFunction.cc  testTPWAFunction.cc.bak
test/testTPWAFunction/: testTPWAFunction.cc
test/testTUtils/: CMakeLists.txt  testConfigParser.cc  testConfigParser.h  testTUtils.cc
